--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,13 @@
   },
   "plugins": ["react", "react-hooks", "@typescript-eslint", "prettier"],
   "rules": {
+    "react/function-component-definition": [
+  2,
+  {
+    "namedComponents": "function-declaration"
+  }
+],
+    
     "prettier/prettier": ["error", { "semi": false }],
     "react/jsx-props-no-spreading": "off",
     "react/prop-types": "off",
