--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@mui/material": "^5.10.12",
     "@mui/styled-engine-sc": "^5.10.6",
     "axios": "^1.1.3",
+    "chart.js": "^4.1.2",
     "dotenv": "^16.0.3",
     "dotenv-webpack": "^8.0.1",
+    "faker": "5.5.3",
     "immer": "^9.0.16",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
@@ -46,6 +49,7 @@
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.4.3",
     "@types/dotenv": "^8.2.0",
+    "@types/faker": "5.5.9",
     "@types/html-webpack-plugin": "^3.2.6",
     "@types/jest": "^29.2.0",
     "@types/react": "^18.0.24",
