--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.10.12",
     "@mui/styled-engine-sc": "^5.10.6",
-    "axios": "^1.1.3",
+    "@types/axios": "^0.14.0",
+    "axios": "^1.2.6",
     "chart.js": "^4.1.2",
     "chartjs-plugin-datalabels": "^2.2.0",
     "dotenv": "^16.0.3",
