--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-icons": "^4.7.1",
     "react-redux": "^7.2.9",
     "react-router": "^6.8.1",
-     "react-router-dom": "^6.8.1",
+    "react-router-dom": "^6.8.1",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
@@ -82,6 +82,8 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths-webpack-plugin": "^4.0.0",
     "typescript": "^4.9.5",
+    "typescript-plugin-css-modules": "^4.2.2",
+    "typings-for-css-modules-loader": "^1.7.0",
     "url-loader": "^4.1.1",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
